--- a/alQuranFrontEnd/package.json
+++ b/alQuranFrontEnd/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "register-service-worker": "^1.7.2",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
@@ -33,6 +34,7 @@
     "tailwindcss": "^3.4.14",
     "typescript": "~5.6.3",
     "vite": "^5.4.10",
+    "vite-plugin-pwa": "^0.20.5",
     "vite-plugin-vue-devtools": "^7.5.4",
     "vue-tsc": "^2.1.10"
   }
